# basalt

./: .gitignore  Cargo.toml  DEVELOPMENT.md  EMBEDDING.md  GUIDE.md  README.md  SPEC.md
.github/workflows/: ci.yml  pages.yml
basalt/: Cargo.toml
basalt-core/: Cargo.toml
basalt-core/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  types.rs
basalt-core/src/compiler/: capture.rs  codegen.rs  mod.rs
basalt-core/src/types/: checker.rs  mod.rs
basalt-core/tests/: error_quality.rs  integration.rs
basalt-vm/: Cargo.toml
basalt-vm/src/: heap.rs  highlight.rs  lib.rs  value.rs  vm.rs
basalt-vm/tests/: execution.rs  suite_runner.rs
basalt/src/: main.rs
examples/: calc.bas  file_io.bas  formatter.bas  json.bas
examples/ssg_demo/: build.bas
examples/ssg_demo/content/: about.md  capabilities.md  (+15 more)
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_compile/: hello.bas  types.bas
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_lex.rs
tests/suite/: arithmetic.bas  arithmetic.expected  arrays.bas  arrays.expected  control_flow.bas  control_flow.expected  enums.bas  enums.expected  error_handling.bas  error_handling.expected  fibonacci.bas  guard.bas  guard.expected  hello.bas  hello.expected  lambdas.bas  lambdas.expected  maps.bas  maps.expected  match_patterns.bas  match_patterns.expected  strings.bas  strings.expected  structs.bas  structs.expected  type_conversions.bas  type_conversions.expected
tree-sitter-basalt/: grammar.js  package.json
tree-sitter-basalt/src/: grammar.json  node-types.json  parser.c
zed-basalt/: LICENSE  extension.toml
(+23 files in other folders)
