[package]
name = "basalt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
basalt-core = { path = "../basalt-core" }

[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
doc = false

[[bin]]
name = "fuzz_lex"
path = "fuzz_targets/fuzz_lex.rs"
doc = false
